RESOLVED FIXED 242854
WebM file fail to play
https://bugs.webkit.org/show_bug.cgi?id=242854
Summary WebM file fail to play
Jean-Yves Avenard [:jya]
Reported 2022-07-18 04:45:50 PDT
STR: 1- Open https://registry.khronos.org/webgl/sdk/tests/resources/red-green.webmvp8.webm Actual: A media error is produced. Expected: Video plays. The video contains an empty vorbis track, this causes the AVFObjC player to later fail as if it finds a track that is not playbable to be a fatal error (failure in MediaPlayerPrivateAVFoundationObjC::trackIsPlayable)
Attachments
Radar WebKit Bug Importer
Comment 1 2022-07-18 04:46:07 PDT
Jean-Yves Avenard [:jya]
Comment 2 2022-07-18 04:55:26 PDT
In this particular case, we could make the track be ignored by the MediaFormatReader if a track is disabled because it contains no data. However, this begs the question: should a file fail to play when a given track is invalid or should it be just ignored?
Jean-Yves Avenard [:jya]
Comment 3 2022-07-19 02:54:17 PDT
EWS
Comment 4 2022-09-07 02:31:58 PDT
Committed 254219@main (af6020b7b7f9): <https://commits.webkit.org/254219@main> Reviewed commits have been landed. Closing PR #2538 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.